[package]
name = "http-logger"
version = "0.1.0"
edition = "2024"
license = "GLWTSPL"

[dependencies]
log = { version = "0.4.29", features = ["serde", "std"] }
minreq = { version = "2.14.1", features = ["json-using-serde"] }
serde = { version = "1.0.228", features = ["derive"] }

[dev-dependencies]
serde_json = "1.0.149"
